# rhdl

./: .gitignore  .gitmodules  .rubocop.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Gemfile  LICENSE  LICENSE.txt  README.md  Rakefile  TEST_FAILURE_CATEGORIZATION.md  debug_ce_signals.rb  debug_cpu.rb  rhdl.gemspec  sim.out  test_hdl_cpu.rb  tmp_after_irqedge_5.ppm  tmp_after_irqpulse_0.ppm  tmp_after_irqpulse_5.ppm  tmp_after_patch_0.ppm  tmp_after_signedfix_4.ppm  tmp_after_statfix_compile_01.ppm  tmp_after_statirq_10.ppm  tmp_after_statirq_2.ppm  tmp_after_statirq_4.ppm  tmp_after_statirq_6.ppm  tmp_after_statirq_8.ppm  tmp_analyze_fb_diff.rb  tmp_autoprog_040.ppm  tmp_autoprog_200.ppm  tmp_autoprog_220.ppm  tmp_baseline_video_3.ppm  tmp_baseline_video_4.ppm  tmp_baseline_video_5.ppm  tmp_bgdecode_3.ppm  tmp_cap_838.ppm  tmp_capture_by_counters.rb  tmp_capture_compile_png.rb  (+141 more)
.tmp/: riscv_ext_probe.s
config/: hygiene_allowlist.yml
cpu/: cpu.rb
diagrams/: README.md
docs/: 8bit_cpu.md  apple2.md  apple2_io.md  chisel_feature_gap_analysis.md  cli.md  components.md  cpu_datapath.md  debugging.md  diagrams.md  dsl.md  export.md  gameboy.md  gate_level_backend.md  hdl_cpu.md  hdl_export.md  hdl_overview.md  import.md  mos6502.md  mos6502_cpu.md  overview.md  performance.md  repo_hygiene.md  riscv.md  riscv_xv6.md  sample_cpu.md  simulation.md  synthesizable_dsl.md  web_architecture.md  web_simulator.md
examples/: add32.rb  add8.rb  alu32.rb  alu8.rb  alu_dsl_example.rb  and32.rb  and8.rb  and_gate4.rb  circuit_diagrams.rb  d_latch.rb  decoder4.rb  decoder8.rb  examples.rb  full_adder.rb  half_adder.rb  inv32.rb  inv8.rb  ms_flip_flop.rb  mux2.rb  mux2x32.rb  mux2x8.rb  mux4.rb  mux4x32.rb  mux4x8.rb  mux8.rb  mux8x32.rb  mux8x8.rb  or32.rb  or8.rb  or_gate4.rb  register32.rb  register8.rb  rfile32.rb  rfile8.rb  rom4.rb  simulator_tui_demo.rb  sr_latch.rb  zero_eq32.rb  zero_eq8.rb
examples/mos6502/utilities/simulators/isa_simulator_native/: .gitignore  Cargo.toml  build.rs  extconf.rb
examples/mos6502/utilities/simulators/isa_simulator_native/src/: lib.rs
exe/: rhdl
lib/: rhdl.rb
lib/rhdl/codegen/circt/sim/firrtl_compiler/: Cargo.toml
lib/rhdl/codegen/circt/sim/firrtl_compiler/src/: lib.rs
lib/rhdl/codegen/circt/sim/firrtl_native/: Cargo.toml
lib/rhdl/codegen/circt/sim/firrtl_native/src/: lib.rs
lib/rhdl/codegen/circt/sim/rtl_interpreter/: Cargo.toml
lib/rhdl/codegen/circt/sim/rtl_interpreter/src/: lib.rs
lib/rhdl/codegen/ir/sim-refactor/ir_interpreter/: Cargo.toml
lib/rhdl/codegen/ir/sim-refactor/ir_interpreter/src/: core.rs  lib.rs
lib/rhdl/codegen/ir/sim-refactor/ir_jit/: Cargo.toml
lib/rhdl/codegen/ir/sim-refactor/ir_jit/src/: ffi.rs
lib/rhdl/codegen/ir/sim-refactor/ir_jit/src/extensions/apple2/: ffi.rs
lib/rhdl/codegen/ir/sim-refactor/ir_jit/src/extensions/mos6502/: ffi.rs
lib/rhdl/codegen/ir/sim/ir_compiler/: .gitignore  Cargo.toml
lib/rhdl/codegen/ir/sim/ir_compiler/src/: aot_generated.rs  core.rs  ffi.rs  lib.rs  vcd.rs
lib/rhdl/codegen/ir/sim/ir_compiler/src/examples/: apple2.rs  mod.rs  mos6502.rs
lib/rhdl/codegen/ir/sim/ir_compiler/src/extensions/: mod.rs
lib/rhdl/codegen/ir/sim/ir_compiler/src/extensions/ao486/: mod.rs
lib/rhdl/codegen/ir/sim/ir_compiler/src/extensions/apple2/: ffi.rs  mod.rs
lib/rhdl/codegen/ir/sim/ir_compiler/src/extensions/cpu8bit/: mod.rs
lib/rhdl/codegen/ir/sim/ir_compiler/src/extensions/gameboy/: ffi.rs  mod.rs
lib/rhdl/codegen/ir/sim/ir_compiler/src/extensions/mos6502/: ffi.rs  mod.rs
lib/rhdl/codegen/ir/sim/ir_compiler/src/extensions/riscv/: mod.rs
lib/rhdl/codegen/ir/sim/ir_interpreter/: Cargo.toml
lib/rhdl/codegen/ir/sim/ir_interpreter/src/: apple2_runner.rs  core.rs  ffi.rs  lib.rs  vcd.rs
lib/rhdl/codegen/ir/sim/ir_interpreter/src/extensions/: mod.rs
lib/rhdl/codegen/ir/sim/ir_interpreter/src/extensions/ao486/: mod.rs
lib/rhdl/codegen/ir/sim/ir_interpreter/src/extensions/apple2/: ffi.rs  mod.rs
lib/rhdl/codegen/ir/sim/ir_interpreter/src/extensions/cpu8bit/: mod.rs
lib/rhdl/codegen/ir/sim/ir_interpreter/src/extensions/gameboy/: ffi.rs  mod.rs
lib/rhdl/codegen/ir/sim/ir_interpreter/src/extensions/mos6502/: ffi.rs  mod.rs
lib/rhdl/codegen/ir/sim/ir_interpreter/src/extensions/riscv/: mod.rs
lib/rhdl/codegen/netlist/sim/netlist_compiler/: Cargo.toml
lib/rhdl/codegen/netlist/sim/netlist_compiler/src/: lib.rs
lib/rhdl/codegen/structure/sim/cpu_native/: Cargo.toml
lib/rhdl/codegen/structure/sim/cpu_native/src/: lib.rs
lib/rhdl/codegen/structure/sim/netlist_interpreter/: Cargo.toml
lib/rhdl/codegen/structure/sim/netlist_interpreter/src/: lib.rs
prd/: 2026_02_20_linux_boot_riscv_prd.md  2026_02_20_riscv_c_extension_prd.md  2026_02_20_riscv_f_extension_prd.md  2026_02_20_riscv_v_extension_prd.md  2026_02_23_linux_config_fpu_shell_prd.md  2026_02_23_linux_mmu_sbi_shell_boot_prd.md  2026_02_23_riscv_c_extension_prd.md  2026_02_23_riscv_extensions_master_prd.md  2026_02_23_riscv_v_extension_prd.md  2026_02_23_riscv_zacas_prd.md  2026_02_23_riscv_zawrs_prd.md  2026_02_23_riscv_zba_prd.md  2026_02_23_riscv_zbb_prd.md  2026_02_23_riscv_zbc_prd.md  2026_02_23_riscv_zbkb_prd.md  2026_02_23_riscv_zicbom_prd.md  2026_02_23_riscv_zicbop_prd.md  2026_02_23_riscv_zicboz_prd.md  2026_02_24_riscv_web_linux_runner_prd.md  2026_02_25_ao486_rhdl_port_prd.md  2026_02_25_arcilator_integration_prd.md  2026_02_25_msdos4_boot_prd.md  2026_02_25_rtl_visualizer_d3_gpu_prd.md  2026_02_25_xv6_pipeline_boot_debug_prd.md  2026_02_26_full_live_ux_worker_prd.md  2026_02_26_riscv_hdl_uart_prd.md  2026_02_26_riscv_prebuilt_buildroot_toolchain_prd.md  2026_02_27_ao486_importer_conversion_prd.md  2026_02_27_riscv_ilp32d_fd_prd.md  2026_02_27_verilog_systemverilog_import_prd.md  2026_02_28_arcilator_wasm_web_backend_prd.md  2026_02_28_electrobun_build_pipeline_prd.md  2026_02_28_eliminate_any_types_prd.md  2026_02_28_typescript_bun_migration_prd.md  2026_03_01_apple2_web_verilator_backend_prd.md  2026_03_01_hir_lir_split_prd.md  2026_03_01_web_riscv_compiler_arcilator_benchmark_prd.md  (+69 more)
(+3542 files in other folders)
