[package]
name = "firrtl_compiler"
version = "0.1.0"
edition = "2021"
authors = ["RHDL Team"]
description = "JIT-compiled RTL simulator - generates specialized Rust code for maximum performance"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
