[package]
name = "ir_jit"
version = "0.1.0"
edition = "2021"
authors = ["RHDL Team"]
description = "Cranelift-based JIT compiler for IR simulation - runtime code generation for zero-dispatch evaluation"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.100", features = ["unbounded_depth"] }
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
