[package]
name = "ir_compiler"
version = "0.1.0"
edition = "2021"
authors = ["RHDL Team"]
description = "IR Compiler - generates specialized native code for circuit simulation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
aot = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.100", features = ["unbounded_depth"] }
libloading = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
