[package]
name = "netlist_compiler"
version = "0.1.0"
edition = "2021"
authors = ["RHDL Team"]
description = "Rustc-based compiler for gate-level netlist simulation - generates specialized Rust code"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
